--- a/Heart_Rate_Estimation_from_PPG_using_Vision_Transformer.ipynb
+++ b/Heart_Rate_Estimation_from_PPG_using_Vision_Transformer.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMsUdavD9BDYjcZsCefBboJ",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMsUdavD9BDYjcZsCefBboJ"
     },
     "kernelspec": {
       "name": "python3",
@@ -34564,16 +34563,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Anton3090/Heart-Rate-Estimation-from-PPG-using-Vision-Transformer/blob/main/Heart_Rate_Estimation_from_PPG_using_Vision_Transformer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
